--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>StudentExercise</title>
 </head>
 <body>
-    
+  <h1>Welcome To My Website!</h1>  
+  <p>This is some text</p>
+  <h2>Second Level Heading</h2>
+  <p>This is some text</p>
+  <h3>Third Level Heading</h3>
+  <p>This is some text</p>
+  <h4>Fourth Level Heading</h4>
+  <p>This is some text</p>
+  <h5>Fifth Level Heading</h5>
+  <p>This is some text</p>
+  <h6>Sixth Level Heading</h6>
+  <p>This is some text</p>
 </body>
 </html>
