--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <title>StudentExercise</title>
 </head>
 <body>
-  <h1>Welcome To My Website!</h1>  
+  <h1>Welcome To My Website! - Rafael Gropen</h1>  
+  <p> International Student from Brazil, currently a sophomore at GW (George Washington University). Majoring in Business with a double concentration in International Business and Finance.</p>
+  <h2>Professional Experiences</h2>
   <p>This is some text</p>
-  <h2>Second Level Heading</h2>
+  <h3>Leadership Experiences</h3>
   <p>This is some text</p>
-  <h3>Third Level Heading</h3>
+  <h4>Interest</h4>
   <p>This is some text</p>
-  <h4>Fourth Level Heading</h4>
-  <p>This is some text</p>
-  <h5>Fifth Level Heading</h5>
+  <h5>Relevant Courses</h5>
   <p>This is some text</p>
   <h6>Sixth Level Heading</h6>
   <p>This is some text</p>
+
+  <a href="https://www.gwu.edu/">Vist GWU Website</a>
 </body>
 </html>
