--- a/index.html
+++ b/index.html
@@ -21,3 +21,19 @@
   <a href="https://www.gwu.edu/">Vist GWU Website</a>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Page 2</title>
+</head>
+<body>
+
+    <h1>This is Page 2</h1>
+
+
+    <a href="index.html">Visit Home Page</a>
+
+</body>
+</html>
