--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   <h6>Sixth Level Heading</h6>
   <p>This is some text</p>
 
-  <a href="https://www.gwu.edu/">Vist GWU Website</a>
-</body>
-</html>
+  <a href="www.linkedin.com/in/rafaelgropen">Connect with me in Linkedin!</a>
+
+
