--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Welcome To My Website! - Rafael Gropen</h1>  
-  <p> International Student from Brazil, currently a sophomore at GW (George Washington University). Majoring in Business with a double concentration in International Business and Finance.</p>
+  <p> Council Member and Student Consultant with a demonstrated history of working in both sports and consulting industry. Skilled in Communication, Presentations, Strategy, Leadership, and Marketing. Currently seeking a Bachelor's degree focused in International Business and Finance from George Washington University..</p>
   <h2>Professional Experiences</h2>
   <p>This is some text</p>
   <h3>Leadership Experiences</h3>
