--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Rafael Gropen's Website</title>
     <link rel="stylesheet" type="text/css" href="Styles.css">
 
+    <a href="page2.html">Visit Page 2</a>
+
 </head>
 <body>
   <h1>Welcome To My Website! - Rafael Gropen</h1>  
