--- a/index.html
+++ b/index.html
@@ -22,4 +22,7 @@
 
   <a href="www.linkedin.com/in/rafaelgropen"> Connect with me in Linkedin! </a>
 
+</head>
+</body>
+
   <a href="page2.html">Visit Page 2</a>
