--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     </div>
     <div style="color:black;">
       <h1>Content</h1>      
-      <A href="Page Two">Professional Experiences</A>
+      <A href="Page2.html">Professional Experiences</A>
       <p style="color:white">Community Service/Leadership experiences</p>
       <p style="color:white">Interests</p>
-      <A href="https://www.linkedin.com/in/rafaelgropen/">Connect with me in LinkedIn</A>
+      <A href="https://www.linkedin.com/in/rafaelgropen/">Connect with me in LinkedIn!</A>
 
     </div>
     
