--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
     <div style="color:black;">
       <h1>Content</h1>      
       <A href="Page2.html">Professional Experiences</A>
-      <p style="color:white">Community Service/Leadership experiences</p>
-      <p style="color:white">Interests</p>
+      <div></div>
+      <A href="Page3.html">Community Service/Leadership experiences</A>
+      <div></div>
+      <A href="Page4.html">Interests</A>
+      <div></div>
       <A href="https://www.linkedin.com/in/rafaelgropen/">Connect with me in LinkedIn!</A>
 
     </div>
