--- a/Page3.html
+++ b/Page3.html
@@ -35,12 +35,11 @@
                 <p>August 2021 to May 2022</p>
                 <p>The GW Brazilian Club serves to bring together all those interested in Brazilian culture and Portuguese language. We hope to spark general interest in Brazilian culture through the promotion of its language, cuisine, music, literature, and films.</p>
         </li>
-        <h2 style="color: black;"</h2> Founder - Smile Is What You Need</h2>
-            <p>July 2021 - August 2021</p>
+        <h2 style="color: black;"> Founder - Smile Is What You Need</h2>
+            <p>August 2017 - August 2018</p>
+            <p>Smile is What you Need was a campaing to spread awareness and collect donations to various institutions, ranging from nursing homes to daycares that rely on donations to maintain their work.</p>
             <ol>
-                <li>Analyzed over 20+ documents about Operational Technology security, ranging from scholarly articles to companies documents. </li>
-                <li>Spearheaded a formal proposal alongside one more colleague and successfully presented it to the upper management.
-                    <li>Orchestrated the presentation to formally introduce a potential partnership with one of the most respectable companies on OT Cyber Security to create an excellent foundation.</li>
+                <li></li>
             </ol>
             <h2 style="color: black;">Student Consultant - MZZ Ventures at GWU</h2>
             <p>February 2021 - Present</p>
