--- a/Page3.html
+++ b/Page3.html
@@ -38,22 +38,13 @@
         <h2 style="color: black;"> Founder - Smile Is What You Need</h2>
             <p>August 2017 - August 2018</p>
             <p>Smile is What you Need was a campaing to spread awareness and collect donations to various institutions, ranging from nursing homes to daycares that rely on donations to maintain their work.</p>
-            <ol>
-                <li></li>
-            </ol>
-            <h2 style="color: black;">Student Consultant - MZZ Ventures at GWU</h2>
-            <p>February 2021 - Present</p>
-            <ol>
-                <li>Mapped 5+ geographical, social, and economic potential barriers to the foundation of a startup in Uganda.</li>
-                <li>Assembled and organized data necessary for the effective financial counseling of a company founders.</li>
-                <li>Executed a presentation that formalized 4+ solutions to enhance the company foundation and development.</li>
-            </ol>
-            <h2 style="color: black;">SummerIntern - AB InBev</h2>
-                <p>July 2020 - August 2020</p>
-                <ol> 
-                    <li>Led and managed a group project to solve a current issue faced by the company, successfully presented the project to upper officials within the company.</li>
-                    <li>Established and outlined meetings for the group to compose the final project.</li>
-                    <li>Endorsed the compilation of 10+ prototypes proficient development of final product.</li>
-                </ol>
+
+            <h2 style="color: black;">Co-Founder - Lacre do Bem</h2>
+            <p>August 2018 - August 2020</p>
+            <p>Lacre do Bem was a campaign that collected soda taps that were later traded for a wheelchair. This campaing was held for two years and in total it collect enough soda taps to trade in for two wheelchairs.</p>
+            
+            <h2 style="color: black;">Varsity Captain - Volleyball/Soccer</h2>
+                <p>August 2018 - May 2020</p>
+               <p>Led the team in the court or field and kept track of all uniforms, balls and other equipments.</p>
 
     </ul>
