--- a/Page3.html
+++ b/Page3.html
@@ -33,7 +33,7 @@
         <li> 
             <h2 style="color: black;">Vice President of Internal Communications - Brazilian Association at GWU</h2>           
                 <p>August 2021 to May 2022</p>
-                <p>The GW Brazilian Club serves to bring together all those interested in Brazilian culture and Portuguese language. We hope to spark general interest in Brazilian culture through the promotion of its language, cuisine, music, literature, and films.</p>
+                <p>The GW Brazilian Club serves to bring together all those interested in Brazilian culture and Portuguese language. Hoping to spark general interest in Brazilian culture through the promotion of its language, cuisine, music, literature, and films.</p>
         </li>
         <h2 style="color: black;"> Founder - Smile Is What You Need</h2>
             <p>August 2017 - August 2018</p>
