--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div></div>
       <A href="Page3.html">Community Service/Leadership experiences</A>
       <div></div>
-      <A href="Page4.html">Interests</A>
+      <A href="Page4.html">Skills/Activities/Interests</A>
       <div></div>
       <A href="https://www.linkedin.com/in/rafaelgropen/">Connect with me in LinkedIn!</A>
 
