Linking every page to the home page

--- a/Page3.html
+++ b/Page3.html
@@ -48,3 +48,5 @@
                <p>Led the team in the court or field and kept track of all uniforms, balls and other equipments.</p>
 
     </ul>
+
+    ><a href="index.html">Back to the Homepage</a>
