--- a/Page4.html
+++ b/Page4.html
@@ -51,5 +51,5 @@
                 <li>Microsoft Proficient</li>
                 <li>Media Editing Proficient</li>
             </ol>
-
+<div> </div>
             ><a href="index.html">Back to the Homepage</a>
