--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div>
         <h1 style="color:black">Background</h1>
-        <p style="color:white">Council Member with a demonstrated history of working in the sports industry. Skilled in Communication, Presentations, Strategy, Leadership, and Marketing. Currently seeking a Bachelor's degree focused in International Business and Finance from George Washington University.</p>
+        <p style="color:black">Council Member with a demonstrated history of working in the sports industry. Skilled in Communication, Presentations, Strategy, Leadership, and Marketing. Currently seeking a Bachelor's degree focused in International Business and Finance from George Washington University.</p>
     </div>
     <div style="color:black;">
       <h1>Content</h1>      
